# SGCC

./: CMakeLists.txt  README.md  main.cpp  xlnt.cpp
include/: axis.hpp  axis_option_group.hpp  elementbox.hpp  general_form.hpp  globals.hpp  headers.h  info.hpp  parameters.hpp  point.hpp  section_editor.hpp  shape_constructor.hpp  shapes.hpp
src/: axis.cpp  info.cpp  point.cpp  shape_constructor.cpp  shapes.cpp
